introduce new sensor data viewer
git-svn-id: http://subversion.assembla.com/svn/Debrief@3969 cb33b658-6c9e-41a7-9690-cba343611204

--- a/trunk/org.mwc.asset.NetAsset2/plugin.xml
+++ b/trunk/org.mwc.asset.NetAsset2/plugin.xml
@@ -33,6 +33,11 @@
             name="SensorData">
       </view>
       <view
+            class="org.mwc.asset.netasset2.sensor2.SensorRCPView2"
+            id="org.mwc.asset.NetAsset2.SensorView2"
+            name="SensorData 2">
+      </view>
+      <view
             name="Connect"
             class="org.mwc.asset.netasset2.connect.ConnectRCPView"
             id="org.mwc.asset.NetAsset2.ConnectView">
