--- a/trunk/org.mwc.cmap.legacy/.classpath
+++ b/trunk/org.mwc.cmap.legacy/.classpath
@@ -11,7 +11,7 @@
 	<classpathentry exported="true" kind="lib" path="libs/jmf.jar"/>
 	<classpathentry exported="true" kind="lib" path="libs/vrml97.jar"/>
 	<classpathentry exported="true" kind="lib" path="libs/jcommon-1.0.16.jar"/>
-	<classpathentry exported="true" kind="lib" path="libs/jfreechart-1.0.13.jar" sourcepath="/contribs/jfreechart/source"/>
+	<classpathentry exported="true" kind="lib" path="libs/jfreechart-1.0.13.jar" sourcepath="/contribs/jfreechart-1.0.13/source"/>
 	<classpathentry exported="true" kind="lib" path="libs/flanagan.jar"/>
 	<classpathentry kind="output" path="bin"/>
 </classpath>
