commit to ignore scrap folders

--- a/.gitignore
+++ b/.gitignore
@@ -3,3 +3,11 @@ trunk/contribs/fop-1.0/
 trunk/org.mwc.asset.help/bin/
 trunk/org.mwc.asset.legacy/bin/
 trunk/org.mwc.asset.ScenarioController2/bin/
+trunk/org.mwc.cmap.combined.feature/build.xml
+trunk/org.mwc.cmap.core/bin/
+trunk/org.mwc.cmap.legacy/bin/
+trunk/org.mwc.debrief.core/bin/
+trunk/org.mwc.debrief.help/bin/
+trunk/org.mwc.debrief.legacy/bin/
+trunk/org.mwc.debrief.multipath2/bin/
+trunk/org.mwc.debrief.help/html/legacy/
