do some improved ignoring

--- a/.gitignore
+++ b/.gitignore
@@ -11,3 +11,55 @@ trunk/org.mwc.debrief.help/bin/
 trunk/org.mwc.debrief.legacy/bin/
 trunk/org.mwc.debrief.multipath2/bin/
 trunk/org.mwc.debrief.help/html/legacy/
+trunk/deploy/DebriefNG-win32.win32.x86.zip
+trunk/deploy/DebriefNG/
+trunk/deploy/Repository.zip
+trunk/deploy/Repository/
+trunk/org.mwc.cmap.combined.feature/feature.temp.folder/
+trunk/org.mwc.cmap.core/build.xml
+trunk/org.mwc.cmap.core/temp.folder/
+trunk/org.mwc.cmap.grideditor/build.xml
+trunk/org.mwc.cmap.grideditor/javaCompiler...args
+trunk/org.mwc.cmap.layer_manager/build.xml
+trunk/org.mwc.cmap.layer_manager/javaCompiler.layer_manager.jar.args
+trunk/org.mwc.cmap.layer_manager/temp.folder/
+trunk/org.mwc.cmap.legacy/build.xml
+trunk/org.mwc.cmap.legacy/javaCompiler.cmap_legacy.jar.args
+trunk/org.mwc.cmap.legacy/temp.folder/
+trunk/org.mwc.cmap.LiveDataMonitor/build.xml
+trunk/org.mwc.cmap.LiveDataMonitor/javaCompiler...args
+trunk/org.mwc.cmap.LiveDataMonitor/javaCompiler.LiveDataMonitor.jar.args
+trunk/org.mwc.cmap.LiveDataMonitor/temp.folder/
+trunk/org.mwc.cmap.NarrativeViewer/build.xml
+trunk/org.mwc.cmap.NarrativeViewer/javaCompiler...args
+trunk/org.mwc.cmap.overview/build.xml
+trunk/org.mwc.cmap.overview/javaCompiler...args
+trunk/org.mwc.cmap.plot3d/build.xml
+trunk/org.mwc.cmap.plot3d/javaCompiler.Plot3d.jar.args
+trunk/org.mwc.cmap.plot3d/temp.folder/
+trunk/org.mwc.cmap.plotViewer/build.xml
+trunk/org.mwc.cmap.plotViewer/temp.folder/
+trunk/org.mwc.cmap.StaticResources/build.xml
+trunk/org.mwc.cmap.StaticResources/javaCompiler.library.jar.args
+trunk/org.mwc.cmap.TimeController/build.xml
+trunk/org.mwc.cmap.TimeController/temp.folder/
+trunk/org.mwc.cmap.tote/build.xml
+trunk/org.mwc.cmap.tote/javaCompiler.tote.jar.args
+trunk/org.mwc.cmap.tote/temp.folder/
+trunk/org.mwc.cmap.xyplot/build.xml
+trunk/org.mwc.cmap.xyplot/javaCompiler.XYPlot.jar.args
+trunk/org.mwc.cmap.xyplot/temp.folder/
+trunk/org.mwc.debrief.combined.feature/build.xml
+trunk/org.mwc.debrief.combined.feature/feature.temp.folder/
+trunk/org.mwc.debrief.help/build.xml
+trunk/org.mwc.debrief.help/javaCompiler.help_content.jar.args
+trunk/org.mwc.debrief.help/temp.folder/
+trunk/org.mwc.debrief.legacy/build.xml
+trunk/org.mwc.debrief.legacy/javaCompiler.debrief_legacy.jar.args
+trunk/org.mwc.debrief.legacy/temp.folder/
+trunk/org.mwc.debrief.multipath2/build.xml
+trunk/org.mwc.debrief.multipath2/javaCompiler...args
+trunk/org.mwc.debrief.SensorFusion/build.xml
+trunk/org.mwc.debrief.SensorFusion/javaCompiler...args
+trunk/org.mwc.debrief.track_shift/build.xml
+trunk/org.mwc.debrief.track_shift/javaCompiler...args
