--- a/trunk/org.mwc.debrief.build/build361.properties
+++ b/trunk/org.mwc.debrief.build/build361.properties
@@ -31,6 +31,7 @@ p2.artifact.repo=file:${builder}/repository
 # By default the value is *,*,*
 
 # OSX BUILD VERSION:  configs = win32,win32,x86 & macosx,cocoa,x86_64
+# Linux BUILD VERSION:  configs = win32,win32,x86 & linux,gtk,x86
 configs = win32,win32,x86
 #ßarchivesFormat=win32,win32,x86-antZip
 
