Ignore working binary file

--- a/.gitignore
+++ b/.gitignore
@@ -63,3 +63,4 @@ trunk/org.mwc.debrief.SensorFusion/build.xml
 trunk/org.mwc.debrief.SensorFusion/javaCompiler...args
 trunk/org.mwc.debrief.track_shift/build.xml
 trunk/org.mwc.debrief.track_shift/javaCompiler...args
+trunk/org.mwc.debrief.help/docbook/out.fo
