--- a/trunk/org.mwc.debrief.build/build361.properties
+++ b/trunk/org.mwc.debrief.build/build361.properties
@@ -32,7 +32,7 @@ p2.artifact.repo=file:${builder}/repository
 
 # OSX BUILD VERSION:  configs = win32,win32,x86 & macosx,cocoa,x86_64
 # Linux BUILD VERSION:  configs = win32,win32,x86 & linux,gtk,x86
-configs = win32,win32,x86
+configs = win32,win32,x86  & win32,win32,x86_64
 #ßarchivesFormat=win32,win32,x86-antZip
 
 # MAC build options...
