ignore build directory

--- a/.gitignore
+++ b/.gitignore
@@ -72,3 +72,4 @@ trunk/org.mwc.*/bin
 trunk/org.qinetiq.data_feed/bin
 
 trunk/org.mwc.cmap.combined.feature/root_installs/DebriefNG.pdf
+trunk/org.mwc.debrief.build/buildDirectory
