--- a/.gitignore
+++ b/.gitignore
@@ -73,3 +73,5 @@ trunk/org.qinetiq.data_feed/bin
 
 trunk/org.mwc.cmap.combined.feature/root_installs/DebriefNG.pdf
 trunk/org.mwc.debrief.build/buildDirectory
+trunk/deploy/DebriefNG_64
+DebriefNG-win32.win32.x86_64.zip
