--- a/trunk/org.mwc.cmap.legacy/build.properties
+++ b/trunk/org.mwc.cmap.legacy/build.properties
@@ -4,7 +4,10 @@ bin.includes = cmap_legacy.jar,\
                META-INF/,\
                libs/jcommon-1.0.16.jar,\
                libs/jfreechart-1.0.13.jar,\
-               libs/flanagan.jar
+               libs/flanagan.jar,\
+               libs/jackson-core-asl-1.9.4.jar,\
+               libs/jackson-mapper-asl-1.9.4.jar,\
+               libs/joda-time-2.1.jar
 jars.compile.order = cmap_legacy.jar
 source.cmap_legacy.jar = src/
 src.includes = libs/
