--- a/trunk/org.mwc.debrief.GNDManager/build.properties
+++ b/trunk/org.mwc.debrief.GNDManager/build.properties
@@ -4,4 +4,7 @@ bin.includes = plugin.xml,\
                META-INF/,\
                .,\
                icons/,\
-               contexts.xml
+               contexts.xml,\
+               libs/,\
+               libs/swing2swt.jar
+src.includes = libs/
