--- a/trunk/org.mwc.cmap.legacy/.classpath
+++ b/trunk/org.mwc.cmap.legacy/.classpath
@@ -16,5 +16,10 @@
 	<classpathentry kind="lib" path="libs/jackson-core-asl-1.9.4.jar"/>
 	<classpathentry kind="lib" path="libs/jackson-mapper-asl-1.9.4.jar"/>
 	<classpathentry kind="lib" path="libs/joda-time-2.1.jar"/>
+	<classpathentry kind="lib" path="libs/javalite-common-1.2-20120312.200900-220.jar" sourcepath="/Volumes/Sys_Slow/NoBackup/Downloads/javalite-common-1.2-20120312.200900-220-sources.jar">
+		<attributes>
+			<attribute name="javadoc_location" value="jar:file:/Volumes/Sys_Slow/NoBackup/Downloads/javalite-common-1.2-20120312.200900-220-javadoc.jar!/"/>
+		</attributes>
+	</classpathentry>
 	<classpathentry kind="output" path="bin"/>
 </classpath>
