--- a/trunk/org.mwc.cmap.legacy/build.properties
+++ b/trunk/org.mwc.cmap.legacy/build.properties
@@ -7,7 +7,8 @@ bin.includes = cmap_legacy.jar,\
                libs/flanagan.jar,\
                libs/jackson-core-asl-1.9.4.jar,\
                libs/jackson-mapper-asl-1.9.4.jar,\
-               libs/joda-time-2.1.jar
+               libs/joda-time-2.1.jar,\
+               libs/javalite-common-1.2-20120312.200900-220.jar
 jars.compile.order = cmap_legacy.jar
 source.cmap_legacy.jar = src/
 src.includes = libs/
