use correct CMAP category for where View found

--- a/trunk/org.mwc.debrief.GNDManager/plugin.xml
+++ b/trunk/org.mwc.debrief.GNDManager/plugin.xml
@@ -7,7 +7,7 @@
       <view
             name="Network datastore"
             icon="icons/database.png"
-            category="org.mwc.debrief.GNDManager"
+            category="org.mwc.cmap.plotViewer.CMAP"
             class="org.mwc.debrief.gndmanager.views.GNDManager"
             id="org.mwc.debrief.gndmanager.views.GNDManager">
       </view>
