finding sample data file

--- a/trunk/org.mwc.cmap.gt2Plot/build.properties
+++ b/trunk/org.mwc.cmap.gt2Plot/build.properties
@@ -3,4 +3,6 @@ output.. = bin/
 bin.includes = plugin.xml,\
                META-INF/,\
                .,\
-               icons/
+               icons/,\
+               data/
+src.includes = data/
