--- a/trunk/org.mwc.cmap.gt2Plot/plugin.xml
+++ b/trunk/org.mwc.cmap.gt2Plot/plugin.xml
@@ -5,10 +5,10 @@
    <extension
          point="org.eclipse.ui.views">
       <view
-            name="Sample View"
+            name="GT Test View"
             icon="icons/sample.gif"
             category="org.mwc.cmap.plotViewer.CMAP"
-            class="org.mwc.cmap.gt2plot.views.SampleView"
+            class="org.mwc.cmap.gt2plot.views.ViewTest"
             id="org.mwc.cmap.gt2plot.views.SampleView">
       </view>
    </extension>
