--- a/trunk/org.mwc.cmap.plotViewer/plugin.xml
+++ b/trunk/org.mwc.cmap.plotViewer/plugin.xml
@@ -3,7 +3,7 @@
 <plugin
    id="org.mwc.cmap.plotViewer"
    name="Plot Viewer"
-   version="1.0.54"
+   version="1.0.55"
    provider-name="MWC"
    class="org.mwc.cmap.plotViewer.PlotViewerPlugin">
 
@@ -21,6 +21,7 @@
       <import plugin="org.eclipse.core.resources"/>
       <import plugin="org.eclipse.ui.ide"/>
       <import plugin="org.eclipse.ui.views"/>
+      <import plugin="org.mwc.cmap.gt2Plot" version="1.0.0"/>
    </requires>
 
 
