--- a/trunk/org.mwc.cmap.gt2Plot/build.properties
+++ b/trunk/org.mwc.cmap.gt2Plot/build.properties
@@ -25,6 +25,8 @@ bin.includes = plugin.xml,\
                libs/jai_codec-1.1.3.jar,\
                libs/jai_imageio-1.1.jar,\
                libs/jt-zonalstats-1.2.0.jar,\
-               libs/gt-swt-8.0-M4.jar
+               libs/gt-swt-8.0-M4.jar,\
+               libs/hsqldb-1.8.0.7.jar,\
+               libs/gt-epsg-hsql-8.0-M4.jar
 src.includes = data/,\
                libs/
