--- a/trunk/org.mwc.cmap.gt2Plot/.classpath
+++ b/trunk/org.mwc.cmap.gt2Plot/.classpath
@@ -2,6 +2,7 @@
 <classpath>
 	<classpathentry exported="true" kind="lib" path="libs/gt-epsg-hsql-8.0-M4.jar"/>
 	<classpathentry exported="true" kind="lib" path="libs/hsqldb-1.8.0.7.jar"/>
+	<classpathentry kind="lib" path="libs/gt-swing-8.0-M4.jar" sourcepath="/Volumes/Sys_Slow/NoBackup/Downloads/geotools-8.0-M4 src/modules/unsupported/swing/src/main/java"/>
 	<classpathentry kind="con" path="org.eclipse.jdt.launching.JRE_CONTAINER/org.eclipse.jdt.internal.debug.ui.launcher.StandardVMType/J2SE-1.5"/>
 	<classpathentry kind="con" path="org.eclipse.pde.core.requiredPlugins"/>
 	<classpathentry kind="src" path="src"/>
