introduce some classes pulled over from the  aborted gt-dev branch

--- a/trunk/org.mwc.cmap.gt2Plot/build.properties
+++ b/trunk/org.mwc.cmap.gt2Plot/build.properties
@@ -27,6 +27,8 @@ bin.includes = plugin.xml,\
                libs/jt-zonalstats-1.2.0.jar,\
                libs/gt-swt-8.0-M4.jar,\
                libs/hsqldb-1.8.0.7.jar,\
-               libs/gt-epsg-hsql-8.0-M4.jar
+               libs/gt-epsg-hsql-8.0-M4.jar,\
+               libs/gt-image-8.0-M4.jar,\
+               libs/gt-geotiff-8.0-M4.jar
 src.includes = data/,\
                libs/
