--- a/trunk/org.mwc.cmap.gt2Plot/build.properties
+++ b/trunk/org.mwc.cmap.gt2Plot/build.properties
@@ -5,30 +5,6 @@ bin.includes = plugin.xml,\
                .,\
                icons/,\
                data/,\
-               libs/,\
-               libs/commons-pool-1.5.4.jar,\
-               libs/gt-api-8.0-M4.jar,\
-               libs/gt-coverage-8.0-M4.jar,\
-               libs/gt-data-8.0-M4.jar,\
-               libs/jai_core-1.1.3.jar,\
-               libs/jsr-275-1.0-beta-2.jar,\
-               libs/jts-1.12.jar,\
-               libs/vecmath-1.3.2.jar,\
-               libs/xercesImpl-2.7.1.jar,\
-               libs/gt-main-8.0-M4.jar,\
-               libs/gt-metadata-8.0-M4.jar,\
-               libs/gt-opengis-8.0-M4.jar,\
-               libs/gt-referencing-8.0-M4.jar,\
-               libs/gt-render-8.0-M4.jar,\
-               libs/jdom-1.0.jar,\
-               libs/gt-shapefile-8.0-M4.jar,\
-               libs/jai_codec-1.1.3.jar,\
-               libs/jai_imageio-1.1.jar,\
-               libs/jt-zonalstats-1.2.0.jar,\
-               libs/gt-swt-8.0-M4.jar,\
-               libs/hsqldb-1.8.0.7.jar,\
-               libs/gt-epsg-hsql-8.0-M4.jar,\
-               libs/gt-image-8.0-M4.jar,\
-               libs/gt-geotiff-8.0-M4.jar
+               libs/
 src.includes = data/,\
                libs/
