--- a/trunk/org.mwc.cmap.gt2Plot/.classpath
+++ b/trunk/org.mwc.cmap.gt2Plot/.classpath
@@ -5,6 +5,7 @@
 	<classpathentry kind="lib" path="libs/gt-swing-8.0-M4.jar" sourcepath="/Volumes/Sys_Slow/NoBackup/Downloads/geotools-8.0-M4 src/modules/unsupported/swing/src/main/java"/>
 	<classpathentry kind="lib" path="libs/gt-image-8.0-M4.jar" sourcepath="/Volumes/Sys_Slow/NoBackup/Downloads/geotools-8.0-M4 src/modules/plugin/image/src/main"/>
 	<classpathentry kind="lib" path="libs/gt-geotiff-8.0-M4.jar"/>
+	<classpathentry kind="lib" path="libs/gt-wms-8.0-M4.jar"/>
 	<classpathentry kind="con" path="org.eclipse.jdt.launching.JRE_CONTAINER/org.eclipse.jdt.internal.debug.ui.launcher.StandardVMType/J2SE-1.5"/>
 	<classpathentry kind="con" path="org.eclipse.pde.core.requiredPlugins"/>
 	<classpathentry kind="src" path="src"/>
@@ -20,5 +21,8 @@
 	<classpathentry kind="lib" path="libs/jt-zonalstats-1.2.0.jar"/>
 	<classpathentry kind="lib" path="libs/gt-swt-8.0-M4.jar" sourcepath="/Volumes/Sys_Slow/NoBackup/Downloads/geotools-8.0-M4 src/modules/unsupported/swt/src/main/java"/>
 	<classpathentry kind="lib" path="libs/jts-1.12.jar"/>
+	<classpathentry kind="lib" path="libs/jt-utils-1.2.0.jar"/>
+	<classpathentry kind="lib" path="libs/imageio-ext-tiff-1.1.2.jar"/>
+	<classpathentry kind="lib" path="libs/imageio-ext-utilities-1.1.2.jar"/>
 	<classpathentry kind="output" path="bin"/>
 </classpath>
