--- a/trunk/org.mwc.cmap.gt2Plot/.classpath
+++ b/trunk/org.mwc.cmap.gt2Plot/.classpath
@@ -24,5 +24,6 @@
 	<classpathentry kind="lib" path="libs/jt-utils-1.2.0.jar"/>
 	<classpathentry kind="lib" path="libs/imageio-ext-tiff-1.1.2.jar"/>
 	<classpathentry kind="lib" path="libs/imageio-ext-utilities-1.1.2.jar"/>
+	<classpathentry kind="lib" path="libs/gt-referencing-8.0-M4.jar"/>
 	<classpathentry kind="output" path="bin"/>
 </classpath>
