--- a/trunk/org.mwc.cmap.core/.classpath
+++ b/trunk/org.mwc.cmap.core/.classpath
@@ -9,5 +9,10 @@
 	<classpathentry exported="true" kind="lib" path="libs/jfreechart-1.0.13-swt.jar"/>
 	<classpathentry exported="true" kind="lib" path="libs/xstream-1.1.3.jar"/>
 	<classpathentry exported="true" kind="lib" path="libs/mockito-all-1.8.5.jar"/>
+	<classpathentry exported="true" kind="lib" path="image_libs/imageio-ext-tiff-1.1.2.jar"/>
+	<classpathentry exported="true" kind="lib" path="image_libs/imageio-ext-utilities-1.1.2.jar"/>
+	<classpathentry exported="true" kind="lib" path="image_libs/jai_codec-1.1.3.jar"/>
+	<classpathentry exported="true" kind="lib" path="image_libs/jai_core-1.1.3.jar"/>
+	<classpathentry exported="true" kind="lib" path="image_libs/jai_imageio-1.1.jar"/>
 	<classpathentry kind="output" path="bin"/>
 </classpath>
