--- a/trunk/org.mwc.cmap.gt2Plot/.classpath
+++ b/trunk/org.mwc.cmap.gt2Plot/.classpath
@@ -15,15 +15,15 @@
 	<classpathentry kind="lib" path="libs/gt-main-8.0-M4.jar" sourcepath="/Volumes/Sys_Slow/NoBackup/Downloads/geotools-8.0-M4 src/modules/library/main/src/main"/>
 	<classpathentry kind="lib" path="libs/gt-render-8.0-M4.jar" sourcepath="/Volumes/Sys_Slow/NoBackup/Downloads/geotools-8.0-M4 src/modules/library/render/src/main/java"/>
 	<classpathentry kind="lib" path="libs/gt-shapefile-8.0-M4.jar" sourcepath="/Volumes/Sys_Slow/NoBackup/Downloads/geotools-8.0-M4 src/modules/plugin/shapefile/src/main/java"/>
-	<classpathentry kind="lib" path="libs/jai_codec-1.1.3.jar"/>
-	<classpathentry kind="lib" path="libs/jai_core-1.1.3.jar"/>
-	<classpathentry kind="lib" path="libs/jai_imageio-1.1.jar"/>
 	<classpathentry kind="lib" path="libs/jt-zonalstats-1.2.0.jar"/>
 	<classpathentry kind="lib" path="libs/gt-swt-8.0-M4.jar" sourcepath="/Volumes/Sys_Slow/NoBackup/Downloads/geotools-8.0-M4 src/modules/unsupported/swt/src/main/java"/>
 	<classpathentry kind="lib" path="libs/jts-1.12.jar"/>
 	<classpathentry kind="lib" path="libs/jt-utils-1.2.0.jar"/>
-	<classpathentry kind="lib" path="libs/imageio-ext-tiff-1.1.2.jar"/>
-	<classpathentry kind="lib" path="libs/imageio-ext-utilities-1.1.2.jar"/>
 	<classpathentry kind="lib" path="libs/gt-referencing-8.0-M4.jar"/>
+	<classpathentry kind="lib" path="/org.mwc.cmap.core/image_libs/imageio-ext-tiff-1.1.2.jar"/>
+	<classpathentry kind="lib" path="/org.mwc.cmap.core/image_libs/imageio-ext-utilities-1.1.2.jar"/>
+	<classpathentry kind="lib" path="/org.mwc.cmap.core/image_libs/jai_codec-1.1.3.jar"/>
+	<classpathentry kind="lib" path="/org.mwc.cmap.core/image_libs/jai_core-1.1.3.jar"/>
+	<classpathentry kind="lib" path="/org.mwc.cmap.core/image_libs/jai_imageio-1.1.jar"/>
 	<classpathentry kind="output" path="bin"/>
 </classpath>
