incorporate Commons-IO for more efficient file-search

--- a/trunk/org.mwc.cmap.core/.classpath
+++ b/trunk/org.mwc.cmap.core/.classpath
@@ -14,5 +14,6 @@
 	<classpathentry exported="true" kind="lib" path="image_libs/jai_codec-1.1.3.jar"/>
 	<classpathentry exported="true" kind="lib" path="image_libs/jai_core-1.1.3.jar"/>
 	<classpathentry exported="true" kind="lib" path="image_libs/jai_imageio-1.1.jar"/>
+	<classpathentry exported="true" kind="lib" path="libs/commons-io-2.3.jar"/>
 	<classpathentry kind="output" path="bin"/>
 </classpath>
