--- a/trunk/org.mwc.cmap.core/build.properties
+++ b/trunk/org.mwc.cmap.core/build.properties
@@ -10,7 +10,8 @@ bin.includes = plugin.xml,\
                image_libs/imageio-ext-utilities-1.1.2.jar,\
                image_libs/jai_codec-1.1.3.jar,\
                image_libs/jai_core-1.1.3.jar,\
-               image_libs/jai_imageio-1.1.jar
+               image_libs/jai_imageio-1.1.jar,\
+               libs/commons-io-2.3.jar
 jars.compile.order = cmap_core.jar
 src.includes = icons/
 root=file:libs/javaClipboard.dll              
