--- a/trunk/org.mwc.debrief.core/plugin.xml
+++ b/trunk/org.mwc.debrief.core/plugin.xml
@@ -25,6 +25,8 @@
 			</contentTypeBinding>
 			<contentTypeBinding contentTypeId="org.mwc.debrief.contenttype.KMZTrackArchive">
 			</contentTypeBinding>
+			<contentTypeBinding contentTypeId="org.mwc.debrief.contenttype.DebriefPlotGPX">
+			</contentTypeBinding>
 		</editor>
 	</extension>
 
@@ -35,6 +37,15 @@
 			<describer
 				class="org.eclipse.core.runtime.content.XMLRootElementContentDescriber">
 				<parameter name="element" value="plot">
+				</parameter>
+			</describer>
+		</content-type>
+		<content-type base-type="org.eclipse.core.runtime.xml"
+			file-extensions="gpx" id="org.mwc.debrief.contenttype.DebriefPlotGPX"
+			name="Debrief GPX File" priority="normal">
+			<describer
+				class="org.eclipse.core.runtime.content.XMLRootElementContentDescriber">
+				<parameter name="element" value="gpx">
 				</parameter>
 			</describer>
 		</content-type>
@@ -89,6 +100,10 @@
 	<extension point="org.mwc.debrief.core.DebriefPlotLoader">
 		<loader class="org.mwc.debrief.core.loaders.KMLLoader"
 			extensions="kmz" name="KML Track Archive" />
+	</extension>
+	<extension point="org.mwc.debrief.core.DebriefPlotLoader">
+		<loader class="org.mwc.debrief.core.loaders.GPXLoader"
+			extensions="gpx" name="GPX Plot File" />
 	</extension>
 
 
