--- a/trunk/org.mwc.cmap.gt2Plot/.classpath
+++ b/trunk/org.mwc.cmap.gt2Plot/.classpath
@@ -6,7 +6,6 @@
 	<classpathentry kind="lib" path="libs/gt-image-8.0-M4.jar" sourcepath="/Volumes/Sys_Slow/NoBackup/Downloads/geotools-8.0-M4 src/modules/plugin/image/src/main"/>
 	<classpathentry kind="lib" path="libs/gt-geotiff-8.0-M4.jar"/>
 	<classpathentry kind="lib" path="libs/gt-wms-8.0-M4.jar"/>
-	<classpathentry kind="con" path="org.eclipse.jdt.launching.JRE_CONTAINER/org.eclipse.jdt.internal.debug.ui.launcher.StandardVMType/J2SE-1.5"/>
 	<classpathentry kind="con" path="org.eclipse.pde.core.requiredPlugins"/>
 	<classpathentry kind="src" path="src"/>
 	<classpathentry kind="lib" path="libs/gt-data-8.0-M4.jar" sourcepath="/Volumes/Sys_Slow/NoBackup/Downloads/geotools-8.0-M4 src/modules/library/data/src/main"/>
@@ -25,5 +24,6 @@
 	<classpathentry kind="lib" path="/org.mwc.cmap.core/image_libs/jai_codec-1.1.3.jar"/>
 	<classpathentry kind="lib" path="/org.mwc.cmap.core/image_libs/jai_core-1.1.3.jar"/>
 	<classpathentry kind="lib" path="/org.mwc.cmap.core/image_libs/jai_imageio-1.1.jar"/>
+	<classpathentry kind="con" path="org.eclipse.jdt.launching.JRE_CONTAINER"/>
 	<classpathentry kind="output" path="bin"/>
 </classpath>
