Added missing dependencies Replaced internal classes (com.sun.*) with standard ones

--- a/trunk/org.mwc.debrief.GNDManager/build.properties
+++ b/trunk/org.mwc.debrief.GNDManager/build.properties
@@ -6,5 +6,7 @@ bin.includes = plugin.xml,\
                icons/,\
                contexts.xml,\
                libs/,\
-               libs/swing2swt.jar
+               libs/swing2swt.jar,\
+               libs/jackson-core-asl-1.9.4.jar,\
+               libs/jackson-mapper-asl-1.9.4.jar
 src.includes = libs/
