--- a/trunk/org.mwc.gnd.demonstrator/build.properties
+++ b/trunk/org.mwc.gnd.demonstrator/build.properties
@@ -5,4 +5,6 @@ bin.includes = plugin.xml,\
                .,\
                icons/,\
                contexts.xml,\
-               libs/
+               libs/,\
+               libs/postgis_1.3.5.jar,\
+               libs/postgresql-8.3-604.jdbc4.jar
