--- a/trunk/org.mwc.asset.legacy/build.properties
+++ b/trunk/org.mwc.asset.legacy/build.properties
@@ -7,4 +7,5 @@ bin.includes = META-INF/,\
                libs/,\
                libs/postgis_1.3.5.jar,\
                libs/postgresql-8.3-604.jdbc4.jar,\
-               libs/jaxen-1.1.3.jar
+               libs/jaxen-1.1.3.jar,\
+               libs/xercesImpl-2.7.1.jar
