--- a/trunk/org.mwc.debrief.core/plugin.xml
+++ b/trunk/org.mwc.debrief.core/plugin.xml
@@ -235,6 +235,12 @@
 				label="&amp;Wheel" menubarPath="org.mwc.debrief.core.EditorShapes/shapes"
 				style="push" toolbarPath="org.mwc.debrief.core.EditorShapes/shapes" />
 
+
+			<action class="org.mwc.debrief.core.creators.shapes.InsertRangeRings"
+				icon="icons/range_rings.png" id="org.mwc.debrief.core.creators.shapes.InsertRangeRings"
+				label="&amp;Range Rings" menubarPath="org.mwc.debrief.core.EditorShapes/shapes"
+				style="push" toolbarPath="org.mwc.debrief.core.EditorShapes/shapes" />
+
 			<action class="org.mwc.debrief.core.creators.shapes.InsertPolygon"
 				icon="icons/polygon.gif" id="org.mwc.debrief.core.creators.shapes.InsertPolygon"
 				label="&amp;Polygon" menubarPath="org.mwc.debrief.core.EditorShapes/shapes"
