--- a/trunk/org.mwc.debrief.core/plugin.xml
+++ b/trunk/org.mwc.debrief.core/plugin.xml
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <?eclipse version="3.0"?>
-<plugin id="org.mwc.debrief.core" name="Debrief Core" version="1.0.182"
+<plugin id="org.mwc.debrief.core" name="Debrief Core" version="1.0.183"
 	provider-name="MWC" class="org.mwc.debrief.core.DebriefPlugin">
 
 	<runtime>
@@ -239,6 +239,11 @@
 			<action class="org.mwc.debrief.core.creators.shapes.InsertRangeRings"
 				icon="icons/range_rings.png" id="org.mwc.debrief.core.creators.shapes.InsertRangeRings"
 				label="&amp;Range Rings" menubarPath="org.mwc.debrief.core.EditorShapes/shapes"
+				style="push" toolbarPath="org.mwc.debrief.core.EditorShapes/shapes" />
+
+			<action class="org.mwc.debrief.core.creators.shapes.InsertFurthestOnCircles"
+				icon="icons/range_rings.png" id="org.mwc.debrief.core.creators.shapes.InsertFurthestOnCircles"
+				label="&amp;Furthest On Circles" menubarPath="org.mwc.debrief.core.EditorShapes/shapes"
 				style="push" toolbarPath="org.mwc.debrief.core.EditorShapes/shapes" />
 
 			<action class="org.mwc.debrief.core.creators.shapes.InsertPolygon"
