introduce EclipseLink jar, increment version numbers

--- a/trunk/org.mwc.debrief.core/build.properties
+++ b/trunk/org.mwc.debrief.core/build.properties
@@ -8,7 +8,9 @@ bin.includes = plugin.xml,\
                images/,\
                plugin_customization.ini,\
                intro_content/,\
-               splash.bmp
+               splash.bmp,\
+               libs/,\
+               libs/eclipselink.jar
 generate.p2.metadata=true 
 p2.gathering=true
 p2.metadata.repo = file:${buildDirectory}/repository 
