--- a/trunk/org.mwc.debrief.core/.classpath
+++ b/trunk/org.mwc.debrief.core/.classpath
@@ -1,6 +1,7 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <classpath>
 	<classpathentry excluding="AbstractMiniSSEditor.java|MiniSSResourceEditor.java" kind="src" path="src"/>
+	<classpathentry exported="true" kind="lib" path="libs/eclipselink.jar"/>
 	<classpathentry kind="con" path="org.eclipse.pde.core.requiredPlugins"/>
 	<classpathentry kind="con" path="org.eclipse.jdt.launching.JRE_CONTAINER"/>
 	<classpathentry kind="src" path="intro"/>
