--- a/trunk/org.mwc.debrief.core/plugin.xml
+++ b/trunk/org.mwc.debrief.core/plugin.xml
@@ -1,12 +1,17 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <?eclipse version="3.0"?>
-<plugin id="org.mwc.debrief.core" name="Debrief Core" version="1.0.183"
+<plugin id="org.mwc.debrief.core" name="Debrief Core" version="1.0.184"
 	provider-name="MWC" class="org.mwc.debrief.core.DebriefPlugin">
 
 	<runtime>
 		<library name="debrief_core.jar">
 			<export name="*" />
 		</library>
+  <library name="libs/eclipselink.jar">
+     <export
+           name="*">
+     </export>
+  </library>
 	</runtime>
 	<extension point="org.eclipse.ui.views">
 		<category id="org.mwc.debrief.core.DebriefCategory" name="Debrief" />
