ignore some tmp folders

--- a/.gitignore
+++ b/.gitignore
@@ -79,3 +79,5 @@ trunk/org.mwc.cmap.gt2Plot/javaCompiler...args
 trunk/org.mwc.cmap.gt2Plot/build.xml
 trunk/org.mwc.debrief.GNDManager/javaCompiler...args
 trunk/org.mwc.debrief.GNDManager/build.xml
+trunk/org.mwc.asset.help/temp.folder
+trunk/org.mwc.asset.help/javaCompiler.help_content.jar.args
