--- a/trunk/org.mwc.asset.legacy/.classpath
+++ b/trunk/org.mwc.asset.legacy/.classpath
@@ -1,5 +1,8 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <classpath>
+	<classpathentry exported="true" kind="lib" path="libs/resty-0.3.1.jar"/>
+	<classpathentry exported="true" kind="lib" path="libs/jackson-mapper-asl-1.9.4.jar"/>
+	<classpathentry exported="true" kind="lib" path="libs/jackson-core-asl-1.9.4.jar"/>
 	<classpathentry kind="con" path="org.eclipse.jdt.launching.JRE_CONTAINER/org.eclipse.jdt.internal.debug.ui.launcher.StandardVMType/JavaSE-1.6">
 		<accessrules>
 			<accessrule kind="accessible" pattern="**"/>
