--- a/trunk/org.mwc.cmap.plotViewer/plugin.xml
+++ b/trunk/org.mwc.cmap.plotViewer/plugin.xml
@@ -22,6 +22,7 @@
       <import plugin="org.eclipse.ui.ide"/>
       <import plugin="org.eclipse.ui.views"/>
       <import plugin="org.mwc.cmap.gt2Plot" version="1.0.0"/>
+      <import plugin="net.refractions.udig.project.ui" version="1.3.1" export="false"/>
    </requires>
 
 
