--- a/trunk/org.mwc.cmap.plotViewer/plugin.xml
+++ b/trunk/org.mwc.cmap.plotViewer/plugin.xml
@@ -32,5 +32,13 @@
             id="org.mwc.cmap.plotViewer.CMAP"
             name="CMAP"/>
    </extension>
+   <extension
+         point="net.refractions.udig.project.renderer">
+      <renderer
+            class="org.mwc.cmap.plotViewer.editors.udig.PlottableRenderMetricsFactory"
+            id="org.mwc.cmap.plotViewer.editors.udig.PlottableRenderMetricsFactory"
+            name="Plottable Render Metrics Factory">
+      </renderer>
+   </extension>
 
 </plugin>
