--- a/trunk/org.mwc.debrief.core/plugin.xml
+++ b/trunk/org.mwc.debrief.core/plugin.xml
@@ -101,7 +101,7 @@
 		<import plugin="org.eclipse.core.filesystem" />
   <import plugin="org.eclipse.ui.cheatsheets" version="3.4.0"/>
   <import plugin="org.mwc.cmap.gt2Plot" version="1.0.0"/>
-  <import plugin="net.refractions.udig.project.ui" version="1.3.1"/>
+  <import plugin="net.refractions.udig.project.ui"/>
 
 	</requires>
 	<extension-point id="DebriefPlotLoader" name="Plot Loader"
