--- a/trunk/org.mwc.debrief.GNDManager/build.properties
+++ b/trunk/org.mwc.debrief.GNDManager/build.properties
@@ -8,5 +8,8 @@ bin.includes = plugin.xml,\
                libs/,\
                libs/swing2swt.jar,\
                libs/jackson-core-asl-1.9.4.jar,\
-               libs/jackson-mapper-asl-1.9.4.jar
+               libs/jackson-mapper-asl-1.9.4.jar,\
+               libs/es4gwt-client.jar,\
+               libs/es4gwt-shared.jar,\
+               libs/guava-14.0-rc1.jar
 src.includes = libs/
