--- a/trunk/org.mwc.cmap.core/plugin.xml
+++ b/trunk/org.mwc.cmap.core/plugin.xml
@@ -7,6 +7,7 @@
    provider-name="MWC"
    class="org.mwc.cmap.core.CorePlugin">
 
+
    <runtime>
       <library name="cmap_core.jar">
          <export name="*"/>
@@ -74,6 +75,7 @@
       <import plugin="org.eclipse.help"/>
       <import plugin="org.eclipse.ui.ide" version="3.5.2"/>
    </requires>
+   <extension-point id="RightClickSupport" name="RightClickSupport" schema="schema/RightClickSupport.exsd"/>
    
 
   <extension
