partial working wms and have threaded renderer with bugs

--- a/trunk/org.mwc.cmap.gt2Plot/build.properties
+++ b/trunk/org.mwc.cmap.gt2Plot/build.properties
@@ -5,6 +5,43 @@ bin.includes = plugin.xml,\
                .,\
                icons/,\
                data/,\
-               libs/
+               libs/,\
+               libs/commons-codec.jar,\
+               libs/commons-httpclient.jar,\
+               libs/commons-logging.jar,\
+               libs/commons-pool.jar,\
+               libs/gt-api.jar,\
+               libs/gt-coverage.jar,\
+               libs/gt-cql.jar,\
+               libs/gt-data.jar,\
+               libs/gt-epsg-hsql.jar,\
+               libs/gt-geojson.jar,\
+               libs/gt-geotiff.jar,\
+               libs/gt-main.jar,\
+               libs/gt-metadata.jar,\
+               libs/gt-opengis.jar,\
+               libs/gt-referencing.jar,\
+               libs/gt-render.jar,\
+               libs/gt-shapefile.jar,\
+               libs/gt-swing.jar,\
+               libs/gt-swt.jar,\
+               libs/gt-wms.jar,\
+               libs/gt-xml.jar,\
+               libs/hsqldb.jar,\
+               libs/imageio-ext-tiff.jar,\
+               libs/imageio-ext-utilities.jar,\
+               libs/jai_codec.jar,\
+               libs/jai_core.jar,\
+               libs/jai_imageio.jar,\
+               libs/jdom.jar,\
+               libs/jgridshift.jar,\
+               libs/json-simple.jar,\
+               libs/jsr-275.jar,\
+               libs/jt-utils.jar,\
+               libs/jt-zonalstats.jar,\
+               libs/jts.jar,\
+               libs/miglayout-swing.jar,\
+               libs/vecmath.jar,\
+               libs/gt-image.jar
 src.includes = data/,\
                libs/
