--- a/trunk/org.mwc.cmap.gt2Plot/.classpath
+++ b/trunk/org.mwc.cmap.gt2Plot/.classpath
@@ -1,29 +1,44 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <classpath>
-	<classpathentry exported="true" kind="lib" path="libs/gt-epsg-hsql-8.0-M4.jar"/>
-	<classpathentry exported="true" kind="lib" path="libs/hsqldb-1.8.0.7.jar"/>
-	<classpathentry kind="lib" path="libs/gt-swing-8.0-M4.jar" sourcepath="/Volumes/Sys_Slow/NoBackup/Downloads/geotools-8.0-M4 src/modules/unsupported/swing/src/main/java"/>
-	<classpathentry kind="lib" path="libs/gt-image-8.0-M4.jar" sourcepath="/Volumes/Sys_Slow/NoBackup/Downloads/geotools-8.0-M4 src/modules/plugin/image/src/main"/>
-	<classpathentry kind="lib" path="libs/gt-geotiff-8.0-M4.jar"/>
-	<classpathentry kind="lib" path="libs/gt-wms-8.0-M4.jar"/>
+	<classpathentry exported="true" kind="lib" path="libs/gt-image.jar"/>
+	<classpathentry kind="con" path="org.eclipse.jdt.launching.JRE_CONTAINER/org.eclipse.jdt.internal.debug.ui.launcher.StandardVMType/JavaSE-1.6"/>
 	<classpathentry kind="con" path="org.eclipse.pde.core.requiredPlugins"/>
 	<classpathentry kind="src" path="src"/>
-	<classpathentry kind="lib" path="libs/gt-data-8.0-M4.jar" sourcepath="/Volumes/Sys_Slow/NoBackup/Downloads/geotools-8.0-M4 src/modules/library/data/src/main"/>
-	<classpathentry kind="lib" path="libs/gt-api-8.0-M4.jar" sourcepath="/Volumes/Sys_Slow/NoBackup/Downloads/geotools-8.0-M4 src/modules/library/api/src/main/java"/>
-	<classpathentry kind="lib" path="libs/gt-coverage-8.0-M4.jar"/>
-	<classpathentry kind="lib" path="libs/gt-main-8.0-M4.jar" sourcepath="/Volumes/Sys_Slow/NoBackup/Downloads/geotools-8.0-M4 src/modules/library/main/src/main"/>
-	<classpathentry kind="lib" path="libs/gt-render-8.0-M4.jar" sourcepath="/Volumes/Sys_Slow/NoBackup/Downloads/geotools-8.0-M4 src/modules/library/render/src/main/java"/>
-	<classpathentry kind="lib" path="libs/gt-shapefile-8.0-M4.jar" sourcepath="/Volumes/Sys_Slow/NoBackup/Downloads/geotools-8.0-M4 src/modules/plugin/shapefile/src/main/java"/>
-	<classpathentry kind="lib" path="libs/jt-zonalstats-1.2.0.jar"/>
-	<classpathentry kind="lib" path="libs/gt-swt-8.0-M4.jar" sourcepath="/Volumes/Sys_Slow/NoBackup/Downloads/geotools-8.0-M4 src/modules/unsupported/swt/src/main/java"/>
-	<classpathentry kind="lib" path="libs/jts-1.12.jar"/>
-	<classpathentry kind="lib" path="libs/jt-utils-1.2.0.jar"/>
-	<classpathentry kind="lib" path="libs/gt-referencing-8.0-M4.jar"/>
-	<classpathentry kind="lib" path="/org.mwc.cmap.core/image_libs/imageio-ext-tiff-1.1.2.jar"/>
-	<classpathentry kind="lib" path="/org.mwc.cmap.core/image_libs/imageio-ext-utilities-1.1.2.jar"/>
-	<classpathentry kind="lib" path="/org.mwc.cmap.core/image_libs/jai_codec-1.1.3.jar"/>
-	<classpathentry kind="lib" path="/org.mwc.cmap.core/image_libs/jai_core-1.1.3.jar"/>
-	<classpathentry kind="lib" path="/org.mwc.cmap.core/image_libs/jai_imageio-1.1.jar"/>
-	<classpathentry kind="con" path="org.eclipse.jdt.launching.JRE_CONTAINER"/>
+	<classpathentry exported="true" kind="lib" path="libs/commons-codec.jar"/>
+	<classpathentry exported="true" kind="lib" path="libs/commons-httpclient.jar"/>
+	<classpathentry exported="true" kind="lib" path="libs/commons-logging.jar"/>
+	<classpathentry exported="true" kind="lib" path="libs/commons-pool.jar"/>
+	<classpathentry exported="true" kind="lib" path="libs/gt-api.jar"/>
+	<classpathentry exported="true" kind="lib" path="libs/gt-coverage.jar"/>
+	<classpathentry exported="true" kind="lib" path="libs/gt-cql.jar"/>
+	<classpathentry exported="true" kind="lib" path="libs/gt-data.jar"/>
+	<classpathentry exported="true" kind="lib" path="libs/gt-epsg-hsql.jar"/>
+	<classpathentry exported="true" kind="lib" path="libs/gt-geojson.jar"/>
+	<classpathentry exported="true" kind="lib" path="libs/gt-geotiff.jar"/>
+	<classpathentry exported="true" kind="lib" path="libs/gt-main.jar"/>
+	<classpathentry exported="true" kind="lib" path="libs/gt-metadata.jar"/>
+	<classpathentry exported="true" kind="lib" path="libs/gt-opengis.jar"/>
+	<classpathentry exported="true" kind="lib" path="libs/gt-referencing.jar"/>
+	<classpathentry exported="true" kind="lib" path="libs/gt-render.jar"/>
+	<classpathentry exported="true" kind="lib" path="libs/gt-shapefile.jar"/>
+	<classpathentry exported="true" kind="lib" path="libs/gt-swing.jar"/>
+	<classpathentry exported="true" kind="lib" path="libs/gt-swt.jar"/>
+	<classpathentry exported="true" kind="lib" path="libs/gt-wms.jar"/>
+	<classpathentry exported="true" kind="lib" path="libs/gt-xml.jar"/>
+	<classpathentry exported="true" kind="lib" path="libs/hsqldb.jar"/>
+	<classpathentry exported="true" kind="lib" path="libs/imageio-ext-tiff.jar"/>
+	<classpathentry exported="true" kind="lib" path="libs/imageio-ext-utilities.jar"/>
+	<classpathentry exported="true" kind="lib" path="libs/jai_codec.jar"/>
+	<classpathentry exported="true" kind="lib" path="libs/jai_core.jar"/>
+	<classpathentry exported="true" kind="lib" path="libs/jai_imageio.jar"/>
+	<classpathentry exported="true" kind="lib" path="libs/jdom.jar"/>
+	<classpathentry exported="true" kind="lib" path="libs/jgridshift.jar"/>
+	<classpathentry exported="true" kind="lib" path="libs/json-simple.jar"/>
+	<classpathentry exported="true" kind="lib" path="libs/jsr-275.jar"/>
+	<classpathentry exported="true" kind="lib" path="libs/jt-utils.jar"/>
+	<classpathentry exported="true" kind="lib" path="libs/jt-zonalstats.jar"/>
+	<classpathentry exported="true" kind="lib" path="libs/jts.jar"/>
+	<classpathentry exported="true" kind="lib" path="libs/miglayout-swing.jar"/>
+	<classpathentry exported="true" kind="lib" path="libs/vecmath.jar"/>
 	<classpathentry kind="output" path="bin"/>
 </classpath>
